--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <p>Challenges excite me because they help me learn and get better. I really enjoy learning new things, especially in the ever-changing tech world.</p>
                         <p>Beyond coding, I'm a problem solver and a tech lover and I believe in teamwork. Let's connect and explore the world of coding together.</p>
                         <br>
-                        <p>You can see my some open source repo on my <a href="https://github.com/ArashAbedii" target="_blank">GitHub</a></p>
+                        <p>You can see my open source repos on my <a href="https://github.com/ArashAbedii" target="_blank">GitHub</a></p>
                     </div>
 
                 </div>
@@ -198,7 +198,7 @@
                     <h1 class="fs-2 fw-bold">PORTFOLIO</h1>
                     <div class="col-md-4 col-sm-12 col-12">
                         <img class="myImg" id="myImg" src="./files/ostfly.webp" alt="Spotify Clone" style="width:100%">
-                        <p>Music stream website (OSTFly)<a target="_blank" href="https://app.ostfly.com"><br><small>Open website</small></a></p>
+                        <p>Music streaming website (OSTFly)<a target="_blank" href="https://app.ostfly.com"><br><small>Open website</small></a></p>
                     </div>
 
                     <div class="col-md-4 col-sm-12 col-12">
