fixed imgs alts

--- a/index.html
+++ b/index.html
@@ -197,28 +197,28 @@
                 <div class="row text-center px-1">
                     <h1 class="fs-2 fw-bold">PORTFOLIO</h1>
                     <div class="col-md-4 col-sm-12 col-12">
-                        <img class="myImg" id="myImg" src="./files/ostfly.webp" alt="Spotify Clone" style="width:100%">
+                        <img class="myImg" id="myImg" src="./files/ostfly.webp" alt="Music streaming website (OSTFly)" style="width:100%">
                         <p>Music streaming website (OSTFly)<a target="_blank" href="https://app.ostfly.com"><br><small>Open website</small></a></p>
                     </div>
 
                     <div class="col-md-4 col-sm-12 col-12">
-                        <img class="myImg" src="./files/owldl.webp" alt="Google Drive Webservices Wrapper" style="width:100%">
+                        <img class="myImg" src="./files/owldl.webp" alt="Web content downloader (owldl)" style="width:100%">
                         <p>Web content downloader (owldl)<br><a target="_blank" href="https://owldl.xyz"><small>open website</small></a></p>
 
                     </div>
 
                     <div class="col-md-4 col-sm-12 col-12">
-                        <img class="myImg" src="./files/telebot.webp" alt="PHP framework for creating telegram bots ( TeleBot )" style="width:100%">
+                        <img class="myImg" src="./files/telebot.webp" alt="PHP framework for creating telegram bots (TeleBot)" style="width:100%">
                         <p>PHP framework for creating telegram bots (TeleBot)<br><a target="_blank" href="https://github.com/arashabedii/telebot"><small>Open github</small></a></p>
                     </div>
 
                     <div class="col-md-4 col-sm-12 col-12">
-                        <img class="myImg" src="./files/listify_music_hunter.webp" alt="Music Stream Telegram Bot" style="width:100%">
+                        <img class="myImg" src="./files/listify_music_hunter.webp" alt="Music recognization telegram bot" style="width:100%">
                         <p>Music recognization telegram bot<br><a href="https://t.me/jpmusicbot?start" target="_blank"><small>Open bot</small></a></p>
                     </div>
 
                     <div class="col-md-4 col-sm-12 col-12">
-                        <img class="myImg" id="myImg" src="./files/cms.webp" alt="CMS" style="width:100%;">
+                        <img class="myImg" id="myImg" src="./files/cms.webp" alt="Content management system (CMS)" style="width:100%;">
                         <p>Content management system (CMS)</p>
                     </div>
 
